--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,4 +28,4 @@ install:
 test_script:
   - mkdir for_test
   - cd for_test
-  - py.test --pyargs shablona --cov-report term-missing --cov=shablona
+  - py.test --pyargs saltproc --cov-report term-missing --cov=saltproc
