--- a/doc/Makefile
+++ b/doc/Makefile
@@ -87,17 +87,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/shablona.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/saltproc.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/shablona.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/saltproc.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/shablona"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/shablona"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/saltproc"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/saltproc"
 	@echo "# devhelp"
 
 epub:
