--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
+  - conda install -c anaconda h5py
   - conda install -c conda-forge pyne
   - conda install -c anaconda pytest
 
