New geometries added to obtain longer lifetime

--- a/examples/geometry/1498.ini
+++ b/examples/geometry/1498.ini
@@ -1,6 +1,6 @@
-% ------ 700 rods per quarter, 67 assemblies,
+% ------ 1498 rods per quarter, 67 assemblies
 % SVF =
-% keff = 1.21931E+00 0.00032; +3866pcm
+% keff = 1.35210E+00 0.00021 ;
 
 surf 11 inf
 surf 12 inf
@@ -148,11 +148,11 @@ GT3 F M F M
   M F M F M
 
 lat 11R6 1 0.0 0.0 5 5 3
-GT6 F M F F
+GT6 F M F M
   F M F M F
-  F F F F M
+  M F M F M
   F M F M F
-  F F F F M
+  M F M F M
 
 lat 12 1 0.0 0.0 5 5 3 %6M
 F M F M F
@@ -169,17 +169,17 @@ F F F F F
 M F M F M
 
 lat 13R1 1 0.0 0.0 5 5 3
-GT1 F M F M
-  F M F M F
-  M F M F M
-  F M F M F
-  M F M F M
+GT1 M M M M
+  M M M M M
+  M M M M M
+  M M M M M
+  M M M M M
 
 lat 13R2 1 0.0 0.0 5 5 3
 GT2 F M F M
   F M F M F
   M F M F M
-  F M F F F
+  F M F M F
   M F M F M
 
 lat 13R4 1 0.0 0.0 5 5 3
@@ -191,7 +191,7 @@ GT4 F M F M
 
 lat 13R5 1 0.0 0.0 5 5 3
 GT5 F M F M
-  F F F M F
+  F M F M F
   M F M F M
   F M F M F
   M F M F M
@@ -204,11 +204,11 @@ F F F F F
 F M F M F
 
 lat 15 1 0.0 0.0 5 5 3 %2M
-F F F M F
+F M F M F
 M F M F M
 F M F M F
 M F M F M
-F M F F F
+F M F M F
 
 surf 19 sqc 0.0 0.0 15.031
 cell 1002 16 fuel -19
@@ -228,10 +228,10 @@ M F M F M
 F M F M F
 M F M F M
 F M F M F
-M F M F F
+M F M F M
 
 lat 22 1 0.0 0.0 5 5 3  %5M
-M F M F F
+M F M F M
 F M F M F
 M F M F M
 F M F M F
@@ -239,9 +239,9 @@ M F M F M
 
 lat 23 1 0.0 0.0 5 5 3 %6M
 F M F M F
-M F M F F
+M F M F M
 F M F M F
-M F F F M
+M F M F M
 F M F M F
 
 lat 28 1 0.0 0.0 5 5 3
@@ -259,32 +259,32 @@ M F M F M
 F M F M F
 
 lat 31 1 0.0 0.0 5 5 3  %4M
-M F M F M
-F M F M F
-M F M F M
-F M F M F
-M F M F M
+M M M M M
+M M M M M
+M M M M M
+M M M M M
+M M M M M
 
 lat 32 1 0.0 0.0 5 5 3 %6M
 F M F M F
-F F M F M
+M F M F M
 F M F M F
-M F M F F
+M F M F M
 F M F M F
 
 lat 33 1 0.0 0.0 5 5 3 %5M
 M F M F M
-F F F M F
+F M F M F
 M F M F M
 F M F M F
 M F M F M
 
 lat 38 1 0.0 0.0 5 5 3
-F F F M F
+F M F M F
 M F M F M
 F M F M F
 M F M F M
-F M F F F
+F M F M F
 
 lat 41 1 0.0 0.0 5 5 3
 M F F F F
@@ -295,17 +295,24 @@ F F F F F
 
 lat 42 1 0.0 0.0 5 5 3
 F M F M F
-M F F F M
+M F M F M
 F M F M F
-F F M F M
+M F M F M
 F M F M F
 
 lat 47 1 0.0 0.0 5 5 3
-F M F F F
-M F M F M
-F F F M F
+F M F M F
 M F M F M
 F M F M F
+M F M F M
+F M F M F
+
+lat 48 1 0.0 0.0 5 5 3
+M M M M F
+M M M F M
+M M F M M
+M F M M M
+F M M M M
 
 lat 52 1 0.0 0.0 5 5 3
 F M F M F
@@ -316,9 +323,9 @@ F M F M F
 
 lat 53 1 0.0 0.0 5 5 3 %5M
 M F M F M
-F M F F F
+F M F M F
 M F M F M
-F F F M F
+F M F M F
 M F M F M
 
 lat 57 1 0.0 0.0 5 5 3
@@ -329,56 +336,50 @@ M F M F M
 F F F F F
 
 lat 61 1 0.0 0.0 5 5 3
-F F M F F
+M F M F M
 F M F M F
-M F F F F
+M F M F M
 F M F M F
-F F F F F
+M F M F M
 
 lat 63 1 0.0 0.0 5 5 3
 M F M F M
 F M F M F
 M F M F M
-F M F F F
+F M F M F
 M F M F M
 
 lat 71 1 0.0 0.0 5 5 3
-F F F F F
-F M F M F
-F F F F F
-F M F M F
-F F F F F
-
-lat 72 1 0.0 0.0 5 5 3
-F M F M F
-F F F F F
-F M F M F
-F F F F F
-F M F M F
-
-lat 75 1 0.0 0.0 5 5 3 %2M
-F F F M F
 M F M F M
-F M F F F
+F M F M F
 M F M F M
-F F F F F
+F M F M F
+M F M F M
 
 lat 81 1 0.0 0.0 5 5 3  %7M
-F F M F M
-F M F M F
+F M M M M
+M M M M M
+M M M M M
+M M M M M
+M M M M M
+
+lat 82 1 0.0 0.0 5 5 3
 M F M F M
 F M F M F
 M F M F M
+F M F M M
+M F M M M
+
 %-------------------------
 
 lat 10 1 75.0 75.0 10 10 15
-81   27   22   28   31   28   21   47   22   16
-19 13R1   28 13R2   32   33   42   53   23   16
-19   19 11R3   38   21   47   22   28   61   16
-19   19   19 13R5   42   53   23   63   72   16
-19   19   19   19 11R6   28   61   75   16   16
-19   19   19   19   19   63   72   16   16   16
-19   19   19   19   19   19   71   16   16   16
+81   48   31   48   31   48   31   48   31   16
+19 13R1   48 13R1   48   31   48   31   48   16
+19   19 13R1   48   31   48   31   48   31   16
+19   19   19 13R1   48   31   48   31   48   16
+19   19   19   19 13R1   48   31   48   16   16
+19   19   19   19   19   31   48   16   16   16
+19   19   19   19   19   19   31   16   16   16
 19   19   19   19   19   19   19   16   16   16
 19   19   19   19   19   19   19   19   19   16
 19   19   19   19   19   19   19   19   19   19
