--- a/examples/geometry/633.ini
+++ b/examples/geometry/633.ini
@@ -1,6 +1,6 @@
-% ------ 647 rods per quarter, 67 assemblies, 9.656716/assembly
-% SVF = 0.819827
-% keff = 1.18967E+00 0.00031;
+% ------ 633 rods per quarter, 67 assemblies,
+% SVF =
+% keff = 1.18609E+00 0.00030;
 
 surf 11 inf
 surf 12 inf
@@ -206,9 +206,9 @@ F M F M F
 lat 15 1 0.0 0.0 5 5 3 %2M
 F F F M F
 M F M F M
-F M F M F
-M F M F M
 F M F F F
+M F M F M
+F F F F F
 
 surf 19 sqc 0.0 0.0 15.0
 cell 1002 16 fuel -19
@@ -254,7 +254,7 @@ F F F M F
 lat 27 1 0.0 0.0 5 5 3
 F M F M F
 M F M F M
-F M F M F
+F F F M F
 M F M F M
 F M F M F
 
@@ -355,15 +355,22 @@ F M F M F
 M F M F M
 F M F M F
 M F M F M
+
+lat 82 1 0.0 0.0 5 5 3
+F M F M F
+F F F F F
+F M F M F
+F F F F F
+F M F M F
 %-------------------------
 
 lat 10 1 75.0 75.0 10 10 15
 81   27   22   28   31   38   21   47   22   16
 19 13R1   23 13R2   32   33   42   53   23   16
 19   19 11R3   38   21   47   22   28   61   16
-19   19   19 13R5   42   53   23   63   32   16
+19   19   19 13R5   42   53   23   63   82   16
 19   19   19   19 11R6   28   61   15   16   16
-19   19   19   19   19   63   32   16   16   16
+19   19   19   19   19   63   82   16   16   16
 19   19   19   19   19   19   71   16   16   16
 19   19   19   19   19   19   19   16   16   16
 19   19   19   19   19   19   19   19   19   16
