--- a/examples/geometry/880.ini
+++ b/examples/geometry/880.ini
@@ -1,6 +1,6 @@
-% ------ 850 rods per quarter, 67 assemblies, 10.26865672/assembly
-% SVF = 0.763297
-% keff = 1.25454E+00 0.00029 ; +3191pcm
+% ------ 880 rods per quarter, 67 assemblies
+% SVF =
+% keff = 1.26615E+00 0.00025 ; +2008pcm
 
 surf 11 inf
 surf 12 inf
@@ -179,7 +179,7 @@ lat 13R2 1 0.0 0.0 5 5 3
 GT2 F M F M
   F M F M F
   M F M F M
-  F M F M F
+  F M F M Fcommutinca
   M F M F M
 
 lat 13R4 1 0.0 0.0 5 5 3
@@ -252,18 +252,18 @@ M F M F M
 F M F M F
 
 lat 27 1 0.0 0.0 5 5 3
-F M F M M
-M F M M M
-F M M M F
-M M M F M
-M M F M F
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
 
 lat 31 1 0.0 0.0 5 5 3  %4M
 M F M F M
 F M F M F
 M F M F M
-F M F M F
-M F M F M
+F M F M M
+M F M M M
 
 lat 32 1 0.0 0.0 5 5 3 %6M
 F M F M F
@@ -362,16 +362,24 @@ M M F M F
 M F M F M
 F M F M F
 M F M F M
+
+lat 82 1 0.0 0.0 5 5 3
+M F M F M
+F M F M F
+M F M F M
+F M F M M
+M F M M M
+
 %-------------------------
 
 lat 10 1 75.0 75.0 10 10 15
-81   27   22   48   31   28   21   47   22   16
-19 13R1   28 13R2   32   33   42   53   23   16
-19   19 11R3   38   21   47   22   28   61   16
-19   19   19 13R5   42   53   23   63   32   16
-19   19   19   19 11R6   28   61   15   16   16
-19   19   19   19   19   63   32   16   16   16
-19   19   19   19   19   19   71   16   16   16
+81   27   82   48   31   48   21   27   21   16
+19 13R1   48 13R1   48   21   27   21   27   16
+19   19 13R1   48   21   27   21   27   21   16
+19   19   19 13R1   27   21   27   21   27   16
+19   19   19   19 11R6   27   21   27   16   16
+19   19   19   19   19   21   27   16   16   16
+19   19   19   19   19   19   21   16   16   16
 19   19   19   19   19   19   19   16   16   16
 19   19   19   19   19   19   19   19   19   16
 19   19   19   19   19   19   19   19   19   19
