--- a/examples/geometry/900.ini
+++ b/examples/geometry/900.ini
@@ -1,6 +1,6 @@
-% ------ 578 rods per quarter, 67 assemblies, 8.62686567rods/assembly
-% SVF = 0.839042
-% keff = 1.15810E+00 0.00034;
+% ------ 900 rods per quarter, 67 assemblies
+% SVF =
+% keff = 1.28181E+00 0.00028 ; +2008pcm
 
 surf 11 inf
 surf 12 inf
@@ -141,18 +141,18 @@ F M F M F
 F F F F F
 
 lat 11R3 1 0.0 0.0 5 5 3
-GT3 F M F F
+GT3 F M F M
   F M F M F
-  M F F F F
+  M F M F M
   F M F M F
-  F F F F M
+  M F M F M
 
 lat 11R6 1 0.0 0.0 5 5 3
-GT6 F F F F
+GT6 F M F M
   F M F M F
-  F F F F M
+  M F M F M
   F M F M F
-  F F F F M
+  M F M F M
 
 lat 12 1 0.0 0.0 5 5 3 %6M
 F M F M F
@@ -162,7 +162,7 @@ F F F F F
 F M F M F
 
 lat 13 1 0.0 0.0 5 5 3 %5M
-M F M F MIMP
+M F M F M
 F F F F F
 M F M F M
 F F F F F
@@ -170,17 +170,17 @@ M F M F M
 
 lat 13R1 1 0.0 0.0 5 5 3
 GT1 F M F M
-  F F F F F
+  F M F M F
   M F M F M
-  F F F M F
-  M F M F M
+  F M F M M
+  M F M M M
 
 lat 13R2 1 0.0 0.0 5 5 3
-GT2 F M F M
-  F M F F F
-  M F M F M
-  F F F F F
-  M F M F M
+GT1 F M M M
+  F M M M F
+  M M M F M
+  M M F M M
+  M F M M M
 
 lat 13R4 1 0.0 0.0 5 5 3
 GT4 F M F M
@@ -191,9 +191,9 @@ GT4 F M F M
 
 lat 13R5 1 0.0 0.0 5 5 3
 GT5 F M F M
-  F F F M F
+  F M F M F
   M F M F M
-  F M F F F
+  F M F M F
   M F M F M
 
 lat 14 1 0.0 0.0 5 5 3  %2M
@@ -204,13 +204,13 @@ F F F F F
 F M F M F
 
 lat 15 1 0.0 0.0 5 5 3 %2M
-F F F F F
+F M F M F
 M F M F M
-F F F F F
+F M F M F
 M F M F M
-F F F F F
+F M F M F
 
-surf 19 sqc 0.0 0.0 15.0
+surf 19 sqc 0.0 0.0 15.031
 cell 1002 16 fuel -19
 cell 1003 19 void -19
 
@@ -224,67 +224,67 @@ F F F F F
 
 %----- Varying SVF -------
 lat 21 1 0.0 0.0 5 5 3  %7M
-F F F F M
+M F M F M
 F M F M F
-F F M F M
+M F M F M
 F M F M F
-M F M F F
+M F M F M
 
 lat 22 1 0.0 0.0 5 5 3  %5M
-M F M F F
+M F M F M
 F M F M F
-M F F F M
+M F M F M
 F M F M F
-F F M F M
+M F M F M
 
 lat 23 1 0.0 0.0 5 5 3 %6M
 F M F M F
-M F M F F
+M F M F M
 F M F M F
-M F F F M
+M F M F M
 F M F M F
 
 lat 28 1 0.0 0.0 5 5 3
 F M F M F
 M F M F M
-F M F F F
+F M F M F
 M F M F M
-F F F M F
+F M F M F
 
 lat 27 1 0.0 0.0 5 5 3
-F M F F F
+F M F M F
 M F M F M
-F F F M F
+F M F M F
 M F M F M
 F M F M F
 
 lat 31 1 0.0 0.0 5 5 3  %4M
-F F M F F
+M F M F M
 F M F M F
-M F F F F
-F M F M F
-F F F F M
+M F M F M
+F M F M M
+M F M M M
 
 lat 32 1 0.0 0.0 5 5 3 %6M
 F M F M F
-F F F F F
+M F M F M
 F M F M F
-F F F F F
+M F M F M
 F M F M F
 
 lat 33 1 0.0 0.0 5 5 3 %5M
 M F M F M
-F F F M F
+F M F M F
 M F M F M
-F M F F F
+F M F M F
 M F M F M
 
 lat 38 1 0.0 0.0 5 5 3
-F F F M F
+F M F M F
 M F M F M
-F M F F F
+F M F M F
 M F M F M
-F F F F F
+F M F M F
 
 lat 41 1 0.0 0.0 5 5 3
 M F F F F
@@ -295,17 +295,24 @@ F F F F F
 
 lat 42 1 0.0 0.0 5 5 3
 F M F M F
-F F F F M
+M F M F M
 F M F M F
-F F M F F
+M F M F M
 F M F M F
 
 lat 47 1 0.0 0.0 5 5 3
-F F F F F
+F M F M F
 M F M F M
-F F F M F
+F M F M F
 M F M F M
-F M F F F
+F M F M F
+
+lat 48 1 0.0 0.0 5 5 3
+F M M M F
+M M M F M
+M M F M F
+M F M F M
+F M F M F
 
 lat 52 1 0.0 0.0 5 5 3
 F M F M F
@@ -316,12 +323,12 @@ F M F M F
 
 lat 53 1 0.0 0.0 5 5 3 %5M
 M F M F M
-F F F F F
+F M F M F
 M F M F M
-F F F M F
+F M F M F
 M F M F M
 
-lat 57 1 0.0 0.0 5 5 31.16331
+lat 57 1 0.0 0.0 5 5 3
 F M F F F
 M F M F M
 F F F F F
@@ -329,35 +336,50 @@ M F M F M
 F F F F F
 
 lat 61 1 0.0 0.0 5 5 3
-F F M F F
+M F M F M
 F M F M F
-M F F F F
+M F M F M
 F M F M F
-F F F F F
+M F M F M
 
 lat 63 1 0.0 0.0 5 5 3
 M F M F M
-F M F F F
+F M F M F
 M F M F M
-F F F F F
+F M F M F
 M F M F M
 
 lat 71 1 0.0 0.0 5 5 3
-F F F F F
+M F M F M
 F M F M F
-F F F F F
+M F M F M
 F M F M F
-F F F F F
+M F M F M
+
+lat 81 1 0.0 0.0 5 5 3  %7M
+F M M F M
+M M F M F
+M F M F M
+F M F M M
+M F M M M
+
+lat 82 1 0.0 0.0 5 5 3
+M F M M M
+F M M M F
+M M M F M
+M M F M M
+M F M M M
+
 %-------------------------
 
 lat 10 1 75.0 75.0 10 10 15
-21   27   22   28   31   38   21   47   22   16
-19 13R1   23 13R2   32   33   42   53   23   16
-19   19 11R3   38   21   47   22   28   61   16
-19   19   19 13R5   42   53   23   63   32   16
-19   19   19   19 11R6   28   61   38   16   16
-19   19   19   19   19   63   32   16   16   16
-19   19   19   19   19   19   71   16   16   16
+81   48   82   48   31   48   21   27   21   16
+19 13R2   48 13R1   48   21   27   21   27   16
+19   19 13R1   48   21   27   21   27   21   16
+19   19   19 13R1   27   21   27   21   27   16
+19   19   19   19 11R6   27   21   27   16   16
+19   19   19   19   19   21   27   16   16   16
+19   19   19   19   19   19   21   16   16   16
 19   19   19   19   19   19   19   16   16   16
 19   19   19   19   19   19   19   19   19   16
 19   19   19   19   19   19   19   19   19   19
