--- a/examples/geometry/1070.ini
+++ b/examples/geometry/1070.ini
@@ -1,6 +1,6 @@
-% ------ 402 rods per quarter, 67 assemblies, 6rods/assembly
-% SVF=0.888053
-% keff = 1.05921E+00 0.00034; +2224pcm
+% ------ 1070 rods per quarter, 67 assemblies
+% SVF =
+% keff = 1.31810E+00 0.00027  ;
 
 surf 11 inf
 surf 12 inf
@@ -45,7 +45,7 @@ cell 8  F  fill 7  -3  -6 8
 %Assumed GT took up  1 moderator rod pitch
 
 surf 120 cyl 0.0 0.0 1.5        %OR for  CR GT
-surf 121 cyl 0.0 0.0 1.425      %IR for  CR GT
+surf 121 cyl 0.0 0.0 1.425      %IR for  CR GTinclude "../geometry/various_svf_2/427.ini"
 
 surf 122 cyl 0.0 0.0 0.855      %OR for CR clad
 surf 123 cyl 0.0 0.0 0.810      %OR for CR pois
@@ -141,18 +141,18 @@ F M F M F
 F F F F F
 
 lat 11R3 1 0.0 0.0 5 5 3
-GT3 F F F F
+GT3 F M F M
   F M F M F
-  F F F F F
+  M F M F M
   F M F M F
-  F F F F F
+  M F M F M
 
 lat 11R6 1 0.0 0.0 5 5 3
-GT6 F F F F
+GT6 F M F M
   F M F M F
-  F F F F F
+  M F M F M
   F M F M F
-  F F F F F
+  M F M F M
 
 lat 12 1 0.0 0.0 5 5 3 %6M
 F M F M F
@@ -169,17 +169,17 @@ F F F F F
 M F M F M
 
 lat 13R1 1 0.0 0.0 5 5 3
-GT1 F M F M
-  F F F F F
-  M F M F M
-  F F F F F
-  M F M F M
+GT1 F M M M
+  F M M M F
+  M M M F M
+  M M F M M
+  M F M M M
 
 lat 13R2 1 0.0 0.0 5 5 3
 GT2 F M F M
-  F F F F F
+  F M F M F
   M F M F M
-  F F F F F
+  F M F M F
   M F M F M
 
 lat 13R4 1 0.0 0.0 5 5 3
@@ -191,9 +191,9 @@ GT4 F M F M
 
 lat 13R5 1 0.0 0.0 5 5 3
 GT5 F M F M
-  F F F F F
+  F M F M F
   M F M F M
-  F F F F F
+  F M F M F
   M F M F M
 
 lat 14 1 0.0 0.0 5 5 3  %2M
@@ -204,13 +204,13 @@ F F F F F
 F M F M F
 
 lat 15 1 0.0 0.0 5 5 3 %2M
-F F F F F
+F M F M F
 M F M F M
-F F F F F
+F M F M F
 M F M F M
-F F F F F
+F M F M F
 
-surf 19 sqc 0.0 0.0 15.0
+surf 19 sqc 0.0 0.0 15.031
 cell 1002 16 fuel -19
 cell 1003 19 void -19
 
@@ -224,35 +224,162 @@ F F F F F
 
 %----- Varying SVF -------
 lat 21 1 0.0 0.0 5 5 3  %7M
-F F F F M
+M F M F M
 F M F M F
-F F M F F
+M F M F M
 F M F M F
-M F F F F
+M F M F M
 
 lat 22 1 0.0 0.0 5 5 3  %5M
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+
+lat 23 1 0.0 0.0 5 5 3 %6M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+
+lat 28 1 0.0 0.0 5 5 3
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+
+lat 27 1 0.0 0.0 5 5 3
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+
+lat 31 1 0.0 0.0 5 5 3  %4M
+M F M M M
+F M M M F
+M M M F M
+M M F M M
+M F M M M
+
+lat 32 1 0.0 0.0 5 5 3 %6M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+
+lat 33 1 0.0 0.0 5 5 3 %5M
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+
+lat 38 1 0.0 0.0 5 5 3
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+
+lat 41 1 0.0 0.0 5 5 3
 M F F F F
 F M F M F
 F F F F F
 F M F M F
 F F F F F
 
-lat 27 1 0.0 0.0 5 5 3
+lat 42 1 0.0 0.0 5 5 3
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+
+lat 47 1 0.0 0.0 5 5 3
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+
+lat 48 1 0.0 0.0 5 5 3
+F M M M F
+M M M F M
+M M F M M
+M F M M M
+F M M M M
+
+lat 52 1 0.0 0.0 5 5 3
+F M F M F
+M F F F F
+F M F M F2.12858E+06
 F F F F F
-M F M F F
-F F F M F
-M F F F M
+F M F M F
+
+lat 53 1 0.0 0.0 5 5 3 %5M
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+
+lat 57 1 0.0 0.0 5 5 3
 F M F F F
+M F M F M
+F F F F F
+M F M F M
+F F F F F
+
+lat 61 1 0.0 0.0 5 5 3
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+
+lat 63 1 0.0 0.0 5 5 3
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+
+lat 71 1 0.0 0.0 5 5 3
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+
+lat 81 1 0.0 0.0 5 5 3  %7M
+F M M F M
+M M F M F
+M F M F M
+F M F M M
+M F M M M
+
+lat 82 1 0.0 0.0 5 5 3
+M F M F M
+F M F M F
+M F M F M
+F M F M M
+M F M M M
+
 %-------------------------
 
 lat 10 1 75.0 75.0 10 10 15
-21   27   22   17   11   17   11   17   11   16
-19 13R1   12 13R2   12   13   12   13   12   16
-19   19 11R3   17   11   17   11   17   11   16
-19   19   19 13R5   12   13   12   13   14   16
-19   19   19   19 11R6   17   11   15   16   16
-19   19   19   19   19   13   12   16   16   16
-19   19   19   19   19   19   11   16   16   16
+81   48   31   48   31   48   31   27   21   16
+19 13R1   48 13R1   48   31   27   21   48   16
+19   19 13R1   48   31   27   21   48   21   16
+19   19   19 13R1   27   21   48   21   27   16
+19   19   19   19 13R1   48   21   27   16   16
+19   19   19   19   19   21   27   16   16   16
+19   19   19   19   19   19   21   16   16   16
 19   19   19   19   19   19   19   16   16   16
 19   19   19   19   19   19   19   19   19   16
 19   19   19   19   19   19   19   19   19   19
