--- a/examples/geometry/1274.ini
+++ b/examples/geometry/1274.ini
@@ -1,6 +1,6 @@
-% ------ 994 rods per quarter, 67 assemblies
+% ------ 1274 rods per quarter, 67 assemblies
 % SVF =
-% keff = 1.28044E+00 0.00029 ; +3437pcm
+% keff = 1.33328E+00 0.00024  ;
 
 surf 11 inf
 surf 12 inf
@@ -169,10 +169,10 @@ F F F F F
 M F M F M
 
 lat 13R1 1 0.0 0.0 5 5 3
-GT1 F M F M
-  F M F M F
-  M F M F M
-  F M F M M
+GT1 F M M M
+  F M M M F
+  M M M F M
+  M M F M M
   M F M M M
 
 lat 13R2 1 0.0 0.0 5 5 3
@@ -245,24 +245,17 @@ M F M F M
 F M F M F
 
 lat 28 1 0.0 0.0 5 5 3
-F M F M F
-M F M F M
-F M F M F
-M F M F M
-F M F M F
-
-lat 27 1 0.0 0.0 5 5 3
-F M F M F
-M F M F M
-F M F M F
-M F M F M
-F M F M F
+M M M M F
+M M M F M
+M M F M M
+M F M M M
+F M M M M
 
 lat 31 1 0.0 0.0 5 5 3  %4M
-M F M F M
-F M F M F
-M F M F M
-F M F M M
+M F M M M
+F M M M F
+M M M F M
+M M F M M
 M F M M M
 
 lat 32 1 0.0 0.0 5 5 3 %6M
@@ -310,9 +303,9 @@ F M F M F
 lat 48 1 0.0 0.0 5 5 3
 F M M M F
 M M M F M
-M M F M F
-M F M F M
-F M F M F
+M M F M M
+M F M M M
+F M M M M
 
 lat 52 1 0.0 0.0 5 5 3
 F M F M F
@@ -357,11 +350,11 @@ F M F M F
 M F M F M
 
 lat 81 1 0.0 0.0 5 5 3  %7M
-F M M F M
-M M F M F
-M F M F M
-F M F M M
-M F M M M
+F M M M M
+M M M M M
+M M M M M
+M M M M M
+M M M M M
 
 lat 82 1 0.0 0.0 5 5 3
 M F M F M
@@ -373,9 +366,9 @@ M F M M M
 %-------------------------
 
 lat 10 1 75.0 75.0 10 10 15
-81   27   82   48   31   48   31   48   31   16
+81   28   31   48   31   48   31   48   31   16
 19 13R1   48 13R1   48   31   48   31   48   16
-19   19 13R1   48   82   48   31   48   31   16
+19   19 13R1   48   31   48   31   48   31   16
 19   19   19 13R1   48   31   48   31   48   16
 19   19   19   19 13R1   48   31   48   16   16
 19   19   19   19   19   31   48   16   16   16
