--- a/examples/geometry/681.ini
+++ b/examples/geometry/681.ini
@@ -1,6 +1,6 @@
-% ------ 749 rods per quarter, 67 assemblies, 10.26865672/assembly
-% SVF = 0.791423
-% keff = 1.22263E+00 0.00028; +3296pcm
+% ------ 681 rods per quarter, 67 assemblies,
+% SVF =
+% keff = 1.21679E+00 0.00030; ???
 
 surf 11 inf
 surf 12 inf
@@ -231,7 +231,7 @@ F M F M F
 M F M F F
 
 lat 22 1 0.0 0.0 5 5 3  %5M
-M F M F M
+M F M F F
 F M F M F
 M F M F M
 F M F M F
@@ -241,7 +241,7 @@ lat 23 1 0.0 0.0 5 5 3 %6M
 F M F M F
 M F M F F
 F M F M F
-M F F F M
+M F F F F
 F M F M F
 
 lat 28 1 0.0 0.0 5 5 3
@@ -254,7 +254,7 @@ F M F M F
 lat 27 1 0.0 0.0 5 5 3
 F M F M F
 M F M F M
-F M F M F
+F F F M F
 M F M F M
 F M F M F
 
@@ -329,25 +329,39 @@ M F M F M
 F F F F F
 
 lat 61 1 0.0 0.0 5 5 3
-F F M F M
+F F M F F
 F M F M F
-M F M F F
+M F F F F
 F M F M F
-M F F F M
+F F F F F
 
 lat 63 1 0.0 0.0 5 5 3
 M F M F M
-F M F M F
+F F F F F
 M F M F M
-F M F F F
+F F F F F
 M F M F M
 
 lat 71 1 0.0 0.0 5 5 3
-M F F F M
+F F F F F
 F M F M F
-F F M F M
+F F F F F
 F M F M F
-F F M F M
+F F F F F
+
+lat 72 1 0.0 0.0 5 5 3
+F M F M F
+F F F F F
+F M F M F
+F F F F F
+F M F M F
+
+lat 75 1 0.0 0.0 5 5 3 %2M
+F F F F F
+M F M F M
+F F F F F
+M F M F M
+F F F F F
 
 lat 81 1 0.0 0.0 5 5 3  %7M
 F F M F M
@@ -361,9 +375,9 @@ lat 10 1 75.0 75.0 10 10 15
 81   27   22   28   31   28   21   47   22   16
 19 13R1   28 13R2   32   33   42   53   23   16
 19   19 11R3   38   21   47   22   28   61   16
-19   19   19 13R5   42   53   23   63   32   16
-19   19   19   19 11R6   28   61   15   16   16
-19   19   19   19   19   63   32   16   16   16
+19   19   19 13R5   42   53   23   63   72   16
+19   19   19   19 11R6   28   61   75   16   16
+19   19   19   19   19   63   72   16   16   16
 19   19   19   19   19   19   71   16   16   16
 19   19   19   19   19   19   19   16   16   16
 19   19   19   19   19   19   19   19   19   16
