--- a/examples/geometry/1126.ini
+++ b/examples/geometry/1126.ini
@@ -1,6 +1,6 @@
-% ------ 1274 rods per quarter, 67 assemblies
+% ------ 1126 rods per quarter, 67 assemblies
 % SVF =
-% keff = 1.33328E+00 0.00024  ;
+% keff = 1.32368E+00 0.00025  ;
 
 surf 11 inf
 surf 12 inf
@@ -245,11 +245,18 @@ M F M F M
 F M F M F
 
 lat 28 1 0.0 0.0 5 5 3
-M M M M F
-M M M F M
-M M F M M
-M F M M M
-F M M M M
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
+
+lat 27 1 0.0 0.0 5 5 3
+F M F M F
+M F M F M
+F M F M F
+M F M F M
+F M F M F
 
 lat 31 1 0.0 0.0 5 5 3  %4M
 M F M M M
@@ -350,11 +357,11 @@ F M F M F
 M F M F M
 
 lat 81 1 0.0 0.0 5 5 3  %7M
-F M M M M
-M M M M M
-M M M M M
-M M M M M
-M M M M M
+F M M F M
+M M F M F
+M F M F M
+F M F M M
+M F M M M
 
 lat 82 1 0.0 0.0 5 5 3
 M F M F M
@@ -366,13 +373,13 @@ M F M M M
 %-------------------------
 
 lat 10 1 75.0 75.0 10 10 15
-81   28   31   48   31   48   31   48   31   16
-19 13R1   48 13R1   48   31   48   31   48   16
-19   19 13R1   48   31   48   31   48   31   16
-19   19   19 13R1   48   31   48   31   48   16
-19   19   19   19 13R1   48   31   48   16   16
-19   19   19   19   19   31   48   16   16   16
-19   19   19   19   19   19   31   16   16   16
+81   48   31   48   31   48   31   48   21   16
+19 13R1   48 13R1   48   31   48   21   48   16
+19   19 13R1   48   31   48   21   48   21   16
+19   19   19 13R1   48   21   48   21   27   16
+19   19   19   19 13R1   48   21   27   16   16
+19   19   19   19   19   21   27   16   16   16
+19   19   19   19   19   19   21   16   16   16
 19   19   19   19   19   19   19   16   16   16
 19   19   19   19   19   19   19   19   19   16
 19   19   19   19   19   19   19   19   19   19
