--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda create -n pyne-env python=3.5
+  - conda init bash
   - conda activate pyne-env
   - conda info -a
   - conda install -c anaconda h5py
