Unit tests for App added

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ install:
 
 # run
 script:
-  - pytest --ignore saltproc/tests/integration_tests saltproc
+  - pytest --ignore saltproc/tests/integration_tests saltproc -vv
