--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ install:
   - sudo apt-get install cmake
   - sudo apt-get install libblas-dev
   - sudo apt-get install liblapack-dev
+  - sudo apt-get install git
+  - sudo apt-get update
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -23,6 +25,7 @@ install:
   - conda activate pyne-env
   - conda info -a
   - conda install -c conda-forge pyne
+  - conda install -c anaconda pytest
   - conda install -c conda-forge networkx
   - conda install -c conda-forge pydotplus
 
