Extra information added to TAP geometry files

--- a/examples/geometry/1126.ini
+++ b/examples/geometry/1126.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 1126 rods per quarter, 67 assemblies
-% SVF =
+% SVF = 0.686438
 % keff = 1.32368E+00 0.00025  ;
 
 surf 11 inf
