--- a/examples/geometry/347_base.ini
+++ b/examples/geometry/347_base.ini
@@ -1,4 +1,6 @@
-% ------ 347 rods per quarter, SVF=0.903648 (see http://localhost:8888/notebooks/Desktop/git/ta_xe_equilibrium_test/SVF.ipynb))
+% ------ TAP MSR quarter-core model, 45 degree symmetry
+% ------ 347 rods per quarter; 67 assemblies
+% SVF = 0.903370
 % Keff = 1.03697E+00 0.00049; Base case
 
 surf 11 inf
