--- a/examples/geometry/406.ini
+++ b/examples/geometry/406.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 406 rods per quarter, 67 assemblies, 6.0597rods/assembly
-% SVF=0.886940
+% SVF = 0.886940
 % keff = 1.06676E+00 0.00031; +3345pcm
 
 surf 11 inf
