--- a/examples/geometry/427.ini
+++ b/examples/geometry/427.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 427 rods per quarter, 67 assemblies, 6.037313rods/assembly
-% SVF=0.886940
+% SVF = 0.881092
 % keff = 1.09675E+00 0.00031; +3000pcm
 
 surf 11 inf
