--- a/examples/geometry/505.ini
+++ b/examples/geometry/505.ini
@@ -1,3 +1,4 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 505 rods per quarter, 67 assemblies, 7.53731rods/assembly
 % SVF=0.859371
 % keff = 1.12547E+00 0.00035; +2869pcm
