--- a/examples/geometry/576.ini
+++ b/examples/geometry/576.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 576 rods per quarter, 67 assemblies, 8.62686567rods/assembly
-% SVF = 0.839042
+% SVF = 0.839599
 % keff = 1.15557E+00 0.00032;
 
 surf 11 inf
