--- a/examples/geometry/633.ini
+++ b/examples/geometry/633.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 633 rods per quarter, 67 assemblies,
-% SVF =
+% SVF = 0.823726
 % keff = 1.18609E+00 0.00030;
 
 surf 11 inf
