--- a/examples/geometry/840.ini
+++ b/examples/geometry/840.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 840 rods per quarter, 67 assemblies
-% SVF =
+% SVF = 0.766082
 % keff = 1.24607E+00 0.00030 ; +3700pcm
 
 surf 11 inf
