--- a/examples/geometry/880.ini
+++ b/examples/geometry/880.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 880 rods per quarter, 67 assemblies
-% SVF =
+% SVF = 0.754943
 % keff = 1.26615E+00 0.00025 ; +2008pcm
 
 surf 11 inf
