--- a/examples/geometry/900.ini
+++ b/examples/geometry/900.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 900 rods per quarter, 67 assemblies
-% SVF =
+% SVF = 0.749373
 % keff = 1.28181E+00 0.00028 ; +2008pcm
 
 surf 11 inf
