--- a/examples/geometry/998.ini
+++ b/examples/geometry/998.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 998 rods per quarter, 67 assemblies
-% SVF =
+% SVF = 0.722083
 % keff = 1.30555E+00 0.00024 ;
 
 surf 11 inf
