--- a/examples/geometry/1338.ini
+++ b/examples/geometry/1338.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 1338 rods per quarter, 67 assemblies
-% SVF =
+% SVF = 0.627402
 % keff = 1.34026E+00 0.00025 ;
 
 surf 11 inf
