--- a/examples/geometry/1498.ini
+++ b/examples/geometry/1498.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 1498 rods per quarter, 67 assemblies
-% SVF =
+% SVF = 0.582846
 % keff = 1.35210E+00 0.00021 ;
 
 surf 11 inf
