--- a/examples/geometry/1668_all.ini
+++ b/examples/geometry/1668_all.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 1668 rods per quarter, 67 assemblies
-% SVF =
+% SVF = 0.535505
 % keff = 1.36104E+00 0.00021 ; +1228pcm
 
 surf 11 inf
