--- a/examples/geometry/681.ini
+++ b/examples/geometry/681.ini
@@ -1,5 +1,6 @@
+% ------ TAP MSR quarter-core model, 45 degree symmetry
 % ------ 681 rods per quarter, 67 assemblies,
-% SVF =
+% SVF = 0.810359
 % keff = 1.21679E+00 0.00030; ???
 
 surf 11 inf
