Color of materials changed

--- a/examples/mats/non_burnable_mats_ctrl.ini
+++ b/examples/mats/non_burnable_mats_ctrl.ini
@@ -1,10 +1,3 @@
-mat fuel   -4.9602 tmp 900 rgb 253 231 37  burn 1 vol 4.435305E+7
-3006.09c   -0.000002418        % Mass fraction of Li-6
-3007.09c   -0.0483577563       % Mass fraction of Li-7
-9019.09c   -0.3296428341       % Mass fraction of F-19
-92235.09c  -0.0310998496       % Mass fraction of U-235
-92238.09c  -0.590897142        % Mass fraction of U-238
-
 mat ctrlPois -5.873 tmp 900 rgb 255 128 0 vol 1.11635E+04 % B4C
 6000.09c -0.2307  % B4C
 5010.09c -0.7693
@@ -71,3 +64,7 @@ mat hast   -10.0 tmp 900 rgb 127 205 187  % g/cm3 for mixture From Pettersen The
 mat air -0.001225 tmp 900 rgb 255 168 173
 8016.09c  0.21
 7014.09c  0.79
+
+%mat ctrlPois -2.52 tmp 900 rgb 127 205 187 vol 1.11635E+04
+%6000.09c -0.2307
+%5010.09c -0.7693
