added name to test-saltproc job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
         
   test-saltproc:
     needs: build-saltproc
+    name: "Test SaltProc"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
