--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,4 +53,4 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: "Run test suite"
-      run: pytest saltproc/tests
+      run: pytest --ignor saltproc/tests/integration_tests saltproc
