--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
                               liblapack-dev
                           
       - name: Install packages
-        run: conda install -c conda-forge pyne numpy networkx pydotplus pytest argparse
+        run: conda install -c conda-forge pyne numpy networkx pydotplus pytest
   
       - name: "Build SaltProc"
         run: python setup.py build
