--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -1,22 +1,50 @@
-# This is a basic workflow to help you get started with Actions
+name: Generate and deploy Sphinx documentation
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches:    
+      - master
 
 jobs:
-  build-docs:
-    name: Generate and push Sphinx docs to gh-pages
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-    - uses: seanzhengw/sphinx-pages@master
+    - uses: actions/checkout@v2
+    # Standard drop-in approach that should work for most people.
+    - uses: ammaraskar/sphinx-action@master
       with:
+        docs-folder: "doc/"
+    # Example of using a custom build-command.
+    - uses: ammaraskar/sphinx-action@master
+      with:
+        build-command: "sphinx-build -b html . _build"
+        docs-folder: "docs2/"
+    # Great extra actions to compose with:
+    # Create an artifact of the html output.
+    - uses: actions/upload-artifact@v1
+      with:
+        name: DocumentationHTML
+        path: doc/_build/html/
+    # Publish built docs to gh-pages branch.
+    # ===============================
+    - name: Commit documentation changes
+      run: |
+        git clone https://github.com/arfc/master.git --branch gh-pages --single-branch gh-pages
+        cp -r doc/_build/html/* gh-pages/
+        cd gh-pages
+        touch .nojekyll
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add .
+        git commit -m "Update documentation" -a || true
+        # The above command will fail if no changes were present, so we ignore
+        # that.
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        branch: gh-pages
+        directory: gh-pages
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        create_readme: true
+    # ===============================
