--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -19,8 +19,8 @@ jobs:
     # Example of using a custom build-command.
     - uses: ammaraskar/sphinx-action@master
       with:
-        build-command: "sphinx-build -b html . _build"
-        docs-folder: "docs2/"
+        build-command: "sphinx-apidoc --separate --force --output-dir=src/ ../saltproc"
+        docs-folder: "doc"
     # Great extra actions to compose with:
     # Create an artifact of the html output.
     - uses: actions/upload-artifact@v1
@@ -31,7 +31,7 @@ jobs:
     # ===============================
     - name: Commit documentation changes
       run: |
-        git clone https://github.com/arfc/master.git --branch gh-pages --single-branch gh-pages
+        git clone https://github.com/arfc/saltproc/master.git --branch gh-pages --single-branch gh-pages
         cp -r doc/_build/html/* gh-pages/
         cd gh-pages
         touch .nojekyll
