--- a/examples/tap/geometry/406.ini
+++ b/examples/tap/geometry/406.ini
@@ -96,13 +96,13 @@ cell cr66 CR6 fill 6 -122    -126
 % ordered is confusing see lattice
 % full inserted rod sits at z=0 cm
 % for a pulled rod, just move it out of the core. z=300 fully withdrawn
-trans CR0 0.0 0.0  0
-trans CR1 0.0 0.0  0
-trans CR2 0.0 0.0  0
-trans CR3 0.0 0.0  0
-trans CR4 0.0 0.0  0
-trans CR5 0.0 0.0  0
-trans CR6 0.0 0.0  0
+trans U CR0 0.0 0.0  0
+trans U CR1 0.0 0.0  0
+trans U CR2 0.0 0.0  0
+trans U CR3 0.0 0.0  0
+trans U CR4 0.0 0.0  0
+trans U CR5 0.0 0.0  0
+trans U CR6 0.0 0.0  0
 
 cell gt11 GT1 fill CR1 -122     -9 6
 cell gt12 GT1 fill 6   -121 122 -9 6
