fix branches tag

--- a/.github/workflows/build-penv.yml
+++ b/.github/workflows/build-penv.yml
@@ -1,8 +1,10 @@
 # Preamble
 name: Cache dependencies
 
-on: push
-  branch: ci-testing
+on:
+  push:
+    branches:
+      ci-testing
 
 jobs:
   build-penv:
