--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -1,12 +1,41 @@
-name: SaltProc using Conda
+name: Generate SaltProc environment using Conda
 
-  #on: [push, pull_request]
+  #on:
+  #push:
+  #  branches:
+  #    - ci-test
+
+env:
+  CACHE_NUMBER: 0 # change value to reset cache manually
 
 jobs:
-  build-saltproc:
+  test-saltproc:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
+
+      - name: Set up Mambaforge
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniforge-variant: Mambaforge
+          miniforge-version: latest
+          activate-environment: saltproc-env
+          use-mamba: true
+
+      - name: Install dependencies
+        run: python setup.py install --user
+
+      - name: Set cache date
+        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+      - uses: actions/cache@v2
+        with:
+          path: /usr/share/miniconda3/envs/saltproc-env
+          key: linux-64-conda-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
+        id: cache
+
+
+
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
