--- a/.github/workflows/build-penv.yml
+++ b/.github/workflows/build-penv.yml
@@ -38,6 +38,6 @@ jobs:
       - name: Install dependencies and SaltProc
         if: steps.pip-cache.outputs.cache-hit != 'true'
         run: |
-          pip install requirements.txt
+          pip install -r requirements.txt
           python setup.py install --user
           pip uninstall saltproc
