--- a/.github/workflows/cache-env-pip.yml
+++ b/.github/workflows/cache-env-pip.yml
@@ -2,8 +2,11 @@
 name: Cache dependencies (pip)
 
 on:
-  schedule:
-    - cron: '0 9 * * 1' # run every monday @ 9AM
+  push:
+    branches:
+      - ci-testing
+  #  schedule:
+  #    - cron: '0 9 * * 1' # run every monday @ 9AM
 
 jobs:
   cache-dependencies-pip:
@@ -39,4 +42,4 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install sphinx sphinx-rtd-theme
-          python setup.py install --user
+          python setup.py install
