--- a/.github/workflows/cache-env-conda.yml
+++ b/.github/workflows/cache-env-conda.yml
@@ -45,7 +45,7 @@ jobs:
           CACHE_NUMBER: 0
         with:
           path: /usr/share/miniconda3/envs/saltproc-env
-          key: ${{ runner.os }}-conda-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
+          key: ${{ runner.os }}-conda-$${ hashFiles('etc/saltproc-env-caching.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
           restore-keys: |
             ${{ runner.os }}-conda-
 
@@ -53,5 +53,4 @@ jobs:
       - name: Install dependencies and SaltProc
         if: steps.conda-cache.outputs.cache-hit != 'true'
         run: |
-          mamba install --file requirements.txt
-          mamba install sphinx sphinx-rtd-theme
+          mamba install --file conda-dependencies.txt
