--- a/.github/workflows/cache-env-conda-1.yml
+++ b/.github/workflows/cache-env-conda-1.yml
@@ -1,5 +1,5 @@
 # Preamble
-name: Cache dependencies (conda)
+name: Cache dependencies (conda-v-1)
 
 on:
   push:
@@ -15,17 +15,7 @@ jobs:
 # Setup python
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-
 # Check for existing cache
-      - name: Find cache location
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir ::$(pip cache dir)"
-
       - name: Set up Mambaforge
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -45,9 +35,9 @@ jobs:
           CACHE_NUMBER: 0
         with:
           path: /usr/share/miniconda3/envs/saltproc-env
-          key: ${{ runner.os }}-conda-$${ hashFiles('etc/saltproc-env-caching.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
+          key: ${{ runner.os }}-conda1-$${ hashFiles('conda-dependencies.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
           restore-keys: |
-            ${{ runner.os }}-conda-
+            ${{ runner.os }}-conda1-
 
 # Install dependencies
       - name: Install dependencies and SaltProc
