fix .txt to .yml

--- a/.github/workflows/cache-env-conda-1.yml
+++ b/.github/workflows/cache-env-conda-1.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Install dependencies and SaltProc
         if: steps.conda-cache.outputs.cache-hit != 'true'
         run: |
-          mamba install --file conda-dependencies.txt
+          mamba install --file conda-dependencies.yml
