add version to conda-dependencies.yml

--- a/conda-dependencies.yml
+++ b/conda-dependencies.yml
@@ -1,8 +1,8 @@
 channels:
   - conda-forge
 dependencies:
-  - pyne
-  - numpy
+  - pyne>=0.5.11
+  - numpy>=1.14.0
   - scipy
   - pytables
   - networkx
