--- a/.github/workflows/test-saltproc-conda-2.yml
+++ b/.github/workflows/test-saltproc-conda-2.yml
@@ -24,12 +24,11 @@ jobs:
         id: conda-cache
         uses: actions/cache@v2
         env:
-          CACHE_NUMBER: 0
+          CACHE_NUMBER: 1
         with:
           path: |
             ~/conda_pkgs_dir
             conda-linux-64.lock
-          #key: ${{ runner.os }}-conda2-$${ hashFiles('conda-dependencies.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
           key: ${{ runner.os }}-conda2-$${ hashFiles('envrionment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
           restore-keys: |
             ${{ runner.os }}-conda2-
@@ -48,9 +47,7 @@ jobs:
 
       - name: Create lockfile
         if: steps.conda-cache.outputs.cache-hit != 'true'
-        run: |
-          #conda-lock -f conda-dependencies.yml -p linux-64
-          conda-lock -f environment.yml -p linux-64
+        run: conda-lock -f environment.yml -p linux-64
 
       - name: Set up Conda
         uses: conda-incubator/setup-miniconda@v2
