--- a/.github/workflows/test-saltproc-conda-1.yml
+++ b/.github/workflows/test-saltproc-conda-1.yml
@@ -42,6 +42,7 @@ jobs:
 
 # Install dependencies
       - name: Install dependencies and SaltProc
+        if: steps.conda-cache.outputs.cache-hit != 'true'
         run: mamba install --file conda-dependencies.txt
 
       - name: Build saltproc
