add use-only-tar-bz2: true to v1

--- a/.github/workflows/cache-env-conda-1.yml
+++ b/.github/workflows/cache-env-conda-1.yml
@@ -36,6 +36,7 @@ jobs:
           miniforge-version: latest
           activate-environment: saltproc-env
           use-mamba: true
+          use-only-tar-bz2: true
 
 
 # Install dependencies
