--- a/.github/workflows/test-saltproc-conda-1.yml
+++ b/.github/workflows/test-saltproc-conda-1.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/cache@v2
         id: conda-cache
         env:
-          CACHE_NUMBER: 0
+          CACHE_NUMBER: 1
         with:
           path: /usr/share/miniconda3/envs/saltproc-env
           key: ${{ runner.os }}-conda1-$${ hashFiles('conda-dependencies.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
@@ -40,6 +40,7 @@ jobs:
           miniforge-version: latest
           activate-environment: saltproc-env
           use-mamba: true
+          use-only-tar-bz2: true
 
 # Install dependencies
       - name: Install dependencies and SaltProc
