--- a/.github/workflows/cache-env-conda-2.yml
+++ b/.github/workflows/cache-env-conda-2.yml
@@ -43,5 +43,13 @@ jobs:
       - name: Set up Conda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          environment-file: environment.yml
+          miniforge-variant: Mambaforge
+          miniforge-version: latest
+          activate-environment: saltproc-env
+          use-mamba: true
           use-only-tar-bz2: true
+
+# Install dependencies
+      - name: Install dependencies and SaltProc
+        if: steps.conda-cache.outputs.cache-hit != 'true'
+        run: mamba install --file conda-dependencies.txt
