--- a/.github/workflows/test-saltproc-conda-2.yml
+++ b/.github/workflows/test-saltproc-conda-2.yml
@@ -51,10 +51,13 @@ jobs:
 
 # Install dependencies
       - name: Install dependencies and SaltProc
+        if: steps.conda-cache.outputs.cache-hit != 'true'
         run: mamba install --file conda-dependencies.txt
 
       - name: Build saltproc
-        run: python setup.py install
+        run: |
+          conda activate saltproc-env
+          pip install saltproc
 
       - name: Test saltproc
         run: pytest --ignore saltproc/tests/integration_tests saltproc
